--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 
     <script src="/js/app.js"></script>
 
+    <link rel="stylesheet" href="style.css">
 
-	</head>
-
+  </head>
+  
   <body>
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5" style="text-align: center;">
       <div class="container">
-        <a class="navbar-brand" href="#">
-           <img src="/img/logo.png" width="50" height="35" alt="Orçamento pessoal">
+        <a class="navbar-brand text-center" href="#">
+           <img src="/img/icon.png" width="120" height="120" alt="Orçamento pessoal">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,10 +37,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Cadastro</a>
+              <a class="nav-link item" href="index.html">Cadastrar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="consulta.html">Consulta</a>
+              <a class="nav-link item" href="consulta.html">Consulta</a>
             </li>
           </ul>
           
@@ -52,7 +51,7 @@
     <div class="container">
       <div class="row">
         <div class="col mb-5">
-          <h1 class="display-4">Cadastrar despesas:</h1>
+          <h1 class="display-4 text-uppercase text-center">Cadastrar despesas:</h1>
         </div>
       </div>
 
@@ -60,7 +59,7 @@
         <div class="col-md-2">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
-            <option value="2018">2018</option>
+            <option value="2020">2020</option>
           </select>
         </div>
 
