--- a/consulta.html
+++ b/consulta.html
@@ -107,7 +107,7 @@
 
       <div class="row">
         <div class="col">
-          <table class="table" >
+          <table class="table table-striped table-dark table-hover" >
             <thead>
               <tr>
                 <th>Data</th>
@@ -118,7 +118,15 @@
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="listaDespesas">
+
+              <!--<tr>
+                <td>15/03/2018</td>
+                <td>Alimentação</td>
+                <td>Compras do mês</td>
+                <td>444.75</td>
+              </tr>!-->
+
             </tbody>
           </table>
         </div>
