--- a/consulta.html
+++ b/consulta.html
@@ -79,7 +79,7 @@
 
         <div class="col-md-6">
           <select class="form-control" id="tipo">
-            <option>Tipo</option>
+            <option value="">Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
             <option value="3">Lazer</option>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-dark">
+          <button type="button" class="btn btn-dark" onclick="pesquisaDespesa()">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -129,6 +129,9 @@
 
             </tbody>
           </table>
+          <div>
+            <h1 id="null" class="text-center text-uppercase"></h1>
+          </div>
         </div>
       </div>
     </div>
